--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -1,11 +1,9 @@
 name: Github JD-sign bot
 
 on:
-    push:
-        branches:
-            - master
+    workflow_dispatch:
     schedule:
-        - cron: '5 16 * * *'
+        - cron: '5 09 * * *'
 jobs:
     build:
         runs-on: ubuntu-latest
